--- a/src/index.html
+++ b/src/index.html
@@ -57,14 +57,14 @@
   <section class="lg:h-[500px] pb-56 lg:pb-0 lg:px-28 w-full bg-primary flex items-center justify-end">
     <img src="../img/Rectangle 21.png" class="w-full lg:w-[662px] lg:h-[486px] relative" alt="">
     <div
-      class="bg-white absolute bottom-0 flex flex-col left-0 right-0 lg:m-0 m-auto lg:left-40 w-[90%] lg:w-[464px] lg:h-96 p-[10px]">
+      class="bg-white absolute bottom-0 flex flex-col left-0 right-0 lg:m-0 m-auto lg:left-40 w-[90%] lg:w-[464px] p-5">
       <h3 class="text-4xl mt-7">Ihre Experten für die optimale Absicherung von <span class="text-secendary">
           Beamtenanwärtern</span></h3>
-      <p class="mt-6 mb-5">Ihre Gesundheit ist unser Anliegen. Wir laden Sie herzlich ein, mit uns in Kontakt zu treten
+      <p class="mt-6 text-base mb-5">Ihre Gesundheit ist unser Anliegen. Wir laden Sie herzlich ein, mit uns in Kontakt zu treten
         und von unserer
         spezialisierten Beratung für Beamte zu profitieren. Lassen Sie uns gemeinsam die optimale Absicherung für Ihre
         Zukunft finden.</p>
-      <button class="bg-secendary flex items-center justify-between w-full h-12  p-[10px] text-white">Kostenfreies
+      <button class="bg-secendary flex items-center justify-between w-full h-12 text-base font- p-[10px] text-white">Kostenfreies
         Informationsgespräch
         vereinbaren
         <img src="../img/arrow.png" alt="">
@@ -72,76 +72,76 @@
     </div>
   </section>
 
-  <section class="p-4 lg:py-24 lg:px-16 gap-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+  <section class="p-4 lg:py-24 lg:px-16 gap-20 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
 
     <div class="pb-24 w-full relative lg:pb-0">
-      <img src="../img/banner1.jpg" class="w-full" alt="">
-      <div class="w-[90%] shadow-md p-[10px] absolute inset-x-0 bottom-0 lg:-bottom-32 mx-auto bg-white z-10">
-        <h4 class="text-lg mt-8 mb-3">Beihilfe</h4>
-        <p class="text-base mb-3">Durchblick im Beihilferecht: Dein Leitfaden für optimale Leistungen als Beamter</p>
-        <button class="text-secendary">mehr Informationen
+      <img src="../img/banner1.jpg" class=" h-48 w-96 object-cover " alt="">
+      <div class="w-[90%] shadow-lg p-[10px] absolute inset-x-0 bottom-0 lg:-bottom-44 mx-auto bg-white z-10">
+        <h4 class="text-lg mt-8 font-semibold text-center mb-4">Beihilfe</h4>
+        <p class="text-base text-center mb-4">Durchblick im Beihilferecht: Dein Leitfaden für optimale Leistungen als Beamter</p>
+        <button class="text-secendary mx-auto block mb-9 font-semibold">mehr Informationen
           <i class="fa-solid fa-arrow-right text-secendary"></i>
         </button>
       </div>
     </div>
     <div class="pb-24 w-full relative lg:pb-0">
-      <img src="../img/Rectangle 23.png" class="w-full" alt="">
-      <div class="w-[90%] shadow-md p-[10px] absolute inset-x-0 bottom-0 lg:-bottom-32 mx-auto bg-white z-10">
-        <h4 class="text-lg mt-8 mb-3">Beihilfe</h4>
-        <p class="text-base mb-3">Durchblick im Beihilferecht: Dein Leitfaden für optimale Leistungen als Beamter</p>
-        <button class="text-secendary">mehr Informationen
+      <img src="../img/Rectangle 23.png" class="object-cover h-48 w-96" alt="">
+      <div class="w-[90%] shadow-lg p-[10px] absolute inset-x-0 bottom-0 lg:-bottom-44 mx-auto bg-white z-10">
+        <h4 class="text-lg mt-8 font-semibold text-center mb-4">Beihilfe</h4>
+        <p class="text-base text-center mb-4">Durchblick im Beihilferecht: Dein Leitfaden für optimale Leistungen als Beamter</p>
+        <button class="text-secendary mx-auto block mb-9 font-semibold">mehr Informationen
           <i class="fa-solid fa-arrow-right text-secendary"></i>
         </button>
       </div>
     </div>
     <div class="pb-24 w-full relative lg:pb-0">
-      <img src="../img/Rectangle 24.png" class="w-full" alt="">
-      <div class="w-[90%] shadow-md p-[10px] absolute inset-x-0 bottom-0 lg:-bottom-32 mx-auto bg-white z-10">
-        <h4 class="text-lg mt-8 mb-3">Beihilfe</h4>
-        <p class="text-base mb-3">Durchblick im Beihilferecht: Dein Leitfaden für optimale Leistungen als Beamter</p>
-        <button class="text-secendary">mehr Informationen
+      <img src="../img/Rectangle 24.png" class=" h-48 w-96 object-cover" alt="">
+      <div class="w-[90%] shadow-lg p-[10px] absolute inset-x-0 bottom-0 lg:-bottom-44 mx-auto bg-white z-10">
+        <h4 class="text-lg mt-8 font-semibold text-center mb-4">Beihilfe</h4>
+        <p class="text-base text-center mb-4">Durchblick im Beihilferecht: Dein Leitfaden für optimale Leistungen als Beamter</p>
+        <button class="text-secendary mx-auto block mb-9 font-semibold">mehr Informationen
           <i class="fa-solid fa-arrow-right text-secendary"></i>
         </button>
       </div>
     </div>
   </section>
 
-  <section class="mt-40 pb-12 p-4 lg:px-[100px] bg-[#D9D9D9]">
+  <section class="mt-40 pb-32 p-4 lg:px-[100px] bg-[#D9D9D9]">
     <div class="text-center my-11">
       <h6
-        class="text-sm mt-10 my-5 relative inline-block after:content-[''] after:block after:w-full after:h-[3px] after:bg-secendary after:mt-3">
+        class="text-base mt-10 my-5 relative inline-block after:content-[''] after:block after:w-full after:h-[3px] after:bg-secendary after:mt-3">
         Unser Service
       </h6>
       <h3 class="text-3xl mb-10">Maßgeschneiderte Lösungen </h3>
     </div>
 
-    <div class="lg:flex gap-[22px]">
-      <div class="flex gap-2 mb-3 lg:mb-0 px-5 py h-[250px] bg-white shadow-md flex-col items-center justify-center">
-        <img class="h-10 w-10" src="../img/Group 2.png" alt="">
+    <div class="lg:flex mb-8 gap-[58px]">
+      <div class="flex gap-6 mb-3 lg:mb-0 px-12 py-10 bg-white shadow-md flex-col items-center justify-center">
+        <img class="h-[74px] w-[87px]" src="../img/Group 2.png" alt="">
         <h5 class="text-lg font-semibold">Auswahl passender Beihilfeergänzungstarife</h5>
         <p class="text-center text-sm">Wir helfen Ihnen dabei, aus einer Vielzahl von
           Beihilfeergänzungstarifen denjenigen auszuwählen, der nicht nur Ihren aktuellen Anforderungen entspricht,
           sondern auch langfristig eine flexible und umfassende Absicherung bietet.</p>
       </div>
-      <div class="flex gap-2 px-5 py h-[250px] flex-col bg-primary text-white items-center justify-center">
-        <img class="h-10 w-10" src="../img/Frame.png" alt="">
-        <h5 class="text-lg font-semibold">Auswahl passender Beihilfeergänzungstarife</h5>
+      <div class="flex gap-6 px-12 py-10 flex-col bg-primary text-white items-center justify-center">
+        <img class="h-[74px]  w-[87px]" src="../img/Frame.png" alt="">
+        <h5 class="text-lg  font-semibold">Auswahl passender Beihilfeergänzungstarife</h5>
         <p class="text-center text-sm">Wir helfen Ihnen dabei, aus einer Vielzahl von
           Beihilfeergänzungstarifen denjenigen auszuwählen, der nicht nur Ihren aktuellen Anforderungen entspricht,
           sondern auch langfristig eine flexible und umfassende Absicherung bietet.</p>
       </div>
     </div>
-    <div class="block lg:flex gap-[22px] mt-4">
-      <div class="flex mb-3 lg:mb-0 gap-2 px-5 py h-[250px] bg-white shadow-md flex-col items-center justify-center">
-        <img class="h-10 w-10" src="../img/Frame (1).png" alt="">
-        <h5 class="text-lg font-semibold">Auswahl passender Beihilfeergänzungstarife</h5>
+    <div class="block lg:flex gap-[58px] mt-4">
+      <div class="flex mb-3 lg:mb-0 gap-6 px-12 py-10 bg-white shadow-md flex-col items-center justify-center">
+        <img class="h-[74px]  w-[87px]" src="../img/Group.png" alt="">
+        <h5 class="text-lg  font-semibold">Auswahl passender Beihilfeergänzungstarife</h5>
         <p class="text-center text-sm">Wir helfen Ihnen dabei, aus einer Vielzahl von
           Beihilfeergänzungstarifen denjenigen auszuwählen, der nicht nur Ihren aktuellen Anforderungen entspricht,
           sondern auch langfristig eine flexible und umfassende Absicherung bietet.</p>
       </div>
-      <div class="flex gap-2 px-5 py h-[250px] flex-col bg-primary text-white items-center justify-center">
-        <img class="h-10 w-10" src="../img/Frame3.png" alt="">
-        <h5 class="text-lg font-semibold">Auswahl passender Beihilfeergänzungstarife</h5>
+      <div class="flex gap-6 px-12 py-10 flex-col bg-primary text-white items-center justify-center">
+        <img class="h-[74px]  w-[87px]" src="../img/Frame (1).png" alt="">
+        <h5 class="text-lg  font-semibold">Auswahl passender Beihilfeergänzungstarife</h5>
         <p class="text-center text-sm">Wir helfen Ihnen dabei, aus einer Vielzahl von
           Beihilfeergänzungstarifen denjenigen auszuwählen, der nicht nur Ihren aktuellen Anforderungen entspricht,
           sondern auch langfristig eine flexible und umfassende Absicherung bietet.</p>
@@ -150,29 +150,29 @@
     </div>
   </section>
 
-  <section class="py-10 p-4 lg:px-[102px] lg:py-20">
-    <div class="block lg:flex gap-[22px] items-stretch">
+  <section class="py-24 p-4 lg:px-[102px] lg:py-20">
+    <div class="block lg:flex gap-[58px] items-stretch">
       <img src="../img/pkv-beratung-beamte.jpg" alt="" class="object-cover w-full lg:w-[350px] flex-shrink-0">
       <div class="flex-grow">
         <h6
-          class="text-sm mt-5 lg:mt-0 relative font-bold inline-block after:content-[''] after:block after:w-full after:h-[2px] after:bg-secendary after:mt-3">
+          class="text-base mt-5 lg:mt-0 relative font-bold inline-block after:content-[''] after:block after:w-full after:h-[2px] after:bg-secendary after:mt-3">
           Optimale Krankenversicherung für Beamte
         </h6>
-        <h2 class="text-xl font-bold">Maßgeschneiderte Lösungen durch umfassenden Tarifvergleich und spezialisierte
+        <h2 class="text-3xl text-[#1D183A] font-bold">Maßgeschneiderte Lösungen durch umfassenden Tarifvergleich und spezialisierte
           Beratung</h2>
-        <p class="text-sm my-3">Es ist wichtig, die <b>verschiedenen Angebote der privaten Krankenversicherer zu
+        <p class="text-sm text-[#333333] my-3">Es ist wichtig, die <b>verschiedenen Angebote der privaten Krankenversicherer zu
             vergleichen</b>, um den passenden Beihilfeergänzungstarif zu finden, der den individuellen Bedürfnissen von
           Beamten gerecht wird. Ein umfassender Vergleich der Tarife kann helfen, diejenigen Leistungen zu
           identifizieren, die über die Beihilfe hinausgehen und eine optimale Absicherung im Krankheitsfall bieten.
         </p>
-        <p class="text-sm">
+        <p class="text-sm text-[#333333]">
           Als Versicherungsspezialist verstehen wir, dass Beamte eine spezielle Beratung benötigen, wenn es um ihre
           Krankenversicherung und die ergänzende Absicherung über die Beihilfe hinaus geht. Wir sind
           darauf spezialisiert, Ihnen als Beamtin oder Beamter, die bestmögliche Versicherungslösung zu bieten, die
           Ihren individuellen Anforderungen gerecht wird. Dieses beinhaltet ein bereits <b>bestehendes
             Beamtenverhältnis, aber auch Beamtenanwärter.</b>
         </p>
-        <p class="text-sm my-3">
+        <p class="text-sm text-[#333333] my-3">
           Expertise im Bereich Beihilfe; Dienstunfähigkeit und PKV: Unsere langjährige Erfahrung und spezialisierte
           Expertise im Bereich der privaten <b>Krankenversicherung & Dienstunfähigkeitsabsicherung für Beamte</b>
           ermöglicht es uns, die komplexen Beihilferegelungen und die entsprechenden Zusatzversicherungen genau zu
@@ -185,16 +185,16 @@
   <section class="bg-primary text-white p-4 lg:py-20 lg:px-28">
     <div class="text-center">
       <h6
-        class="text-sm my-6 mx-auto relative inline-block after:content-[''] after:inline-block after:w-full after:h-[3px] after:bg-secendary after:mt-3">
+        class="text-sm my-5 mx-auto relative inline-block after:content-[''] after:inline-block after:w-full after:h-[3px] after:bg-secendary after:mt-3">
         Beamtenvorsorge.de
       </h6>
-      <h4 class="text-2xl">Wer sind wir und wofür stehen wir</h4>
+      <h4 class="text-3xl mb-16">Wer sind wir und wofür stehen wir</h4>
     </div>
-    <div class="block lg:flex items-center gap-12">
+    <div class="block lg:flex items-center gap-16">
       <div>
-        <h3 class="text-base mb-5 mt-5 gap-2 font-medium flex items-center text-secendary"><i
+        <h3 class="text-xl mb-5 mt-5 gap-2 font-medium flex items-center text-secendary"><i
             class="fa-regular fa-circle-check"></i>Seriös</h3>
-        <div class="flex flex-col text-xs gap-y-4 lg:gap-y-8">
+        <div class="flex flex-col text-base gap-y-4 lg:gap-y-8">
           <p> <b>Verlässlich:</b> Wir stehen für Verlässlichkeit und Integrität in all unseren Dienstleistungen.</p>
 
           <p><b>Vertrauenswürdig:</b> Unser Engagement für Vertrauenswürdigkeit spiegelt sich in unserer Arbeit wider.
@@ -209,9 +209,9 @@
         </div>
       </div>
       <div>
-        <h3 class="text-base mb-5 mt-5 gap-2 font-medium flex items-center text-secendary"><i
+        <h3 class="text-xl mb-5 mt-5 gap-2 font-medium flex items-center text-secendary"><i
             class="fa-regular fa-circle-check"></i>Kompetenz</h3>
-        <div class="flex flex-col text-xs gap-y-4 lg:gap-y-8">
+        <div class="flex flex-col text-base gap-y-4 lg:gap-y-8">
           <p> <b>Verlässlich:</b> Wir stehen für Verlässlichkeit und Integrität in all unseren Dienstleistungen.</p>
 
           <p><b>Vertrauenswürdig:</b> Unser Engagement für Vertrauenswürdigkeit spiegelt sich in unserer Arbeit wider.
@@ -226,9 +226,9 @@
         </div>
       </div>
       <div>
-        <h3 class="text-base mb-5 mt-5 gap-2 font-medium flex items-center text-secendary"><i
+        <h3 class="text-xl mb-5 mt-5 gap-2 font-medium flex items-center text-secendary"><i
             class="fa-regular fa-circle-check"></i>Beständigkeit</h3>
-        <div class="flex flex-col text-xs gap-y-4 lg:gap-y-8">
+        <div class="flex flex-col text-base gap-y-4 lg:gap-y-8">
           <p> <b>Verlässlich:</b> Wir stehen für Verlässlichkeit und Integrität in all unseren Dienstleistungen.</p>
 
           <p><b>Vertrauenswürdig:</b> Unser Engagement für Vertrauenswürdigkeit spiegelt sich in unserer Arbeit wider.
@@ -247,18 +247,18 @@
 
   <section class="p-4 lg:px-28 pb-36 pt-20">
     <h6
-      class="text-sm my-6 mx-auto relative inline-block after:content-[''] after:inline-block after:w-full after:h-[2px] after:bg-secendary after:mt-3">
+      class="text-base font-medium my-6 mx-auto relative inline-block after:content-[''] after:inline-block after:w-full after:h-[2px] after:bg-secendary after:mt-3">
       Umfangreiche Maßnahmen zur Genesung und Gesundheitserhaltung
     </h6>
-    <h4 class="text-2xl mb-5">Rehabilitation und Kuren im Beihilferecht für Beamte</h4>
+    <h4 class="text-3xl mb-5">Rehabilitation und Kuren im Beihilferecht für Beamte</h4>
 
     <div class="mt-2">
-      <h6 class="py-[25px] px-[19px] text-sm font-medium cursor-pointer flex items-center justify-between bg-[#F7F7F7]"
+      <h6 class="py-[25px] px-[19px] text-base font-medium cursor-pointer flex items-center justify-between bg-[#F7F7F7]"
         onclick="toggleContent(1)">
         Anschlussheilbehandlung: Umfangreiche Maßnahmen zur Genesung und Gesundheitserhaltung
         <i class="fa-solid text-secendary fa-angle-down"></i>
       </h6>
-      <div id="content-1" class="text-xs p-[10px] flex flex-col gap-y-3">
+      <div id="content-1" class="text-base font-normal p-[10px] flex flex-col gap-y-3">
         <p>Die Anschlussheilbehandlung (AHB) ist eine Art medizinischer Rehabilitationsmaßnahme, die unmittelbar an
           einen Krankenhausaufenthalt anschließt. Sie ist dazu gedacht, die Genesung und Rehabilitation von Patienten
           nach einer stationären Behandlung zu unterstützen. In der Beihilfe für Beamte bezieht sich die AHB auf eine
@@ -275,12 +275,12 @@
     </div>
 
     <div class="mt-2">
-      <h6 class="py-[25px] px-[19px] text-sm font-medium cursor-pointer flex items-center justify-between bg-[#F7F7F7]"
+      <h6 class="py-[25px] px-[19px] text-base font-medium cursor-pointer flex items-center justify-between bg-[#F7F7F7]"
         onclick="toggleContent(2)">
         Anschlussheilbehandlung: Umfangreiche Maßnahmen zur Genesung und Gesundheitserhaltung
         <i class="fa-solid text-secendary fa-angle-down"></i>
       </h6>
-      <div id="content-2" class="text-xs p-[10px] flex flex-col gap-y-3 hide">
+      <div id="content-2" class="text-base font-normal p-[10px] flex flex-col gap-y-3 hide">
         <p>Die Anschlussheilbehandlung (AHB) ist eine Art medizinischer Rehabilitationsmaßnahme, die unmittelbar an
           einen Krankenhausaufenthalt anschließt. Sie ist dazu gedacht, die Genesung und Rehabilitation von Patienten
           nach einer stationären Behandlung zu unterstützen. In der Beihilfe für Beamte bezieht sich die AHB auf eine
@@ -297,12 +297,12 @@
     </div>
 
     <div class="mt-2">
-      <h6 class="py-[25px] px-[19px] text-sm font-medium cursor-pointer flex items-center justify-between bg-[#F7F7F7]"
+      <h6 class="py-[25px] px-[19px] text-base font-medium cursor-pointer flex items-center justify-between bg-[#F7F7F7]"
         onclick="toggleContent(3)">
         Anschlussheilbehandlung: Umfangreiche Maßnahmen zur Genesung und Gesundheitserhaltung
         <i class="fa-solid text-secendary fa-angle-down"></i>
       </h6>
-      <div id="content-3" class="text-xs p-[10px] flex flex-col gap-y-3 hide">
+      <div id="content-3" class="text-base font-normal p-[10px] flex flex-col gap-y-3 hide">
         <p>Die Anschlussheilbehandlung (AHB) ist eine Art medizinischer Rehabilitationsmaßnahme, die unmittelbar an
           einen Krankenhausaufenthalt anschließt. Sie ist dazu gedacht, die Genesung und Rehabilitation von Patienten
           nach einer stationären Behandlung zu unterstützen. In der Beihilfe für Beamte bezieht sich die AHB auf eine
@@ -322,7 +322,7 @@
 
   <footer class="bg-primary relative text-white pt-28 pb-8 p-4 lg:px-28">
     <div
-      class="hidden lg:flex items-center absolute top-[-90px] h-32 justify-between shadow-md w-[700px] p-[10px] bg-white mx-auto left-1/2 transform -translate-x-1/2">
+      class="hidden lg:flex items-center absolute top-[-90px] h-32 justify-between shadow-md w-[700px] px-[20px] bg-white mx-auto left-1/2 transform -translate-x-1/2">
       <div class="text-black">
         <h4 class="text-xl font-semibold">Kostenfreies Informationsgespräch vereinbaren</h4>
         <p class="text-xs">Lassen Sie uns gemeinsam die optimale Absicherung für Ihre Zukunft finden.</p>
